--- a/ecossistema.html
+++ b/ecossistema.html
@@ -120,6 +120,51 @@
         </div>
     </div>
 
+    <!-- Modal Colaboradores -->
+    <div class="modal fade" id="ModalColaboradores" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content modalFiltro--dimensao">
+
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel" style="font-weight: bold;">Nossos
+                        Colaboradores</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <!--Inicio do Conteudo-->
+                <div class="modal-body-colaboradores">
+                    <ul class="listaColaboradores">
+                        <li><b>Allysson Allex Araújo</b> (Universidade Federal do Ceará)</li>
+                        <li><b>Marlon Bruno Matos Paiva</b> (Universidade Federal do Ceará)</li>
+                        <li><b>Maria Isabely Barros</b> (Universidade Federal do Ceará)</li>
+                        <li><b>Francisco das Chagas Alves</b> (Universidade Federal do Ceará)</li>
+                        <li><b>Francisco Henrique da Costa</b> (Universidade Federal do Ceará)</li>
+                        <li><b>Rômmel de Castro</b> (Universidade Estadual do Ceará)</li>
+                        <li><b>Pamella Soares</b> (Universidade Estadual do Ceará)</li>
+                        <li><b>Jerffeson Teixeira de Souza</b> (Universidade Estadual do Ceará)</li>
+                        <li><b>Leonardo Sampaio</b> (Universidade Estadual do Ceará)</li>
+                        <li><b>Thiago Bessa Pontes</b> (Universidade Federal do Cariri)</li>
+                        <li><b>Flávio Neves Carneiro</b> (Rapadura Tech)</li>
+                        <li><b>Ray Teixeira da Silva</b> (Rapadura Valley)</li>
+                        <li><b>Mário Alves</b> (Rapadura Valley)</li>
+                        <li><b>Willy Brandt</b> (Kariri Valley)</li>
+                        <li><b>Moisés Santos</b> (Ambiente Local de Empreendedorismo)</li>
+                        <li><b>Maurício Cardoso</b> (Casa Azul Ventures)</li>
+                        <li><b>Estêvão Lima Arrais</b> (SEDECI - Prefeitura de Juazeiro do Norte)</li>
+                    </ul>
+
+                </div>
+                <!--Fim do Conteudo-->
+                <div class="modal-footer">
+                    <button id="btn-filtro1" class="texto-btn-filtro" type="button" data-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Fim do Modal Colaboradores--->
+
     <main class="main">
         <div>
             <div class="container" style="background: white">
@@ -185,7 +230,9 @@
                         <div id="divisao2-right-bot">
                             <p class="topicos-ecossistema">PROPOSTA</p>
                             <p class="textos-ecossistema">
-                                O <b>Mapa do Ecossistema de Inovação Cearense</b> é uma plataforma colaborativa, tanto
+                                Sob o escopo de um projeto de extensão da Universidade Federal do Ceará (UFC), o <b>Mapa
+                                    do Ecossistema de
+                                    Inovação Cearense</b> é uma plataforma colaborativa, tanto
                                 do ponto de vista do desenvolvimento, quanto do seu uso, que objetiva reunir de forma
                                 integrada informações sobre
                                 <b>participantes e eventos</b>, proporcionando a todos que tem interesse na comunidade
@@ -210,10 +257,11 @@
                         <div id="divisao3-left-top">
                             <p class="topicos-ecossistema">DESENVOLVIMENTO</p>
                             <p class="textos-ecossistema">
-                                Este projeto foi inicialmente desenvolvido pelo <a href="http://crateus.ufc.br/allysson"
-                                    target="_blank" rel="noopener noreferrer">Prof. Allysson Allex Araújo</a>
+                                Este projeto (atualmente em versão 0.1 Beta) foi inicialmente desenvolvido pelo <a
+                                    href="http://crateus.ufc.br/allysson" target="_blank"
+                                    rel="noopener noreferrer">Prof. Allysson Allex Araújo</a>
                                 (Universidade Federal do Ceará - Campus de Crateús) e
-                                <a href="https://www.linkedin.com/in/r%C3%B4mmel-de-castro-5270a1164/" target="_blank"
+                                <a href="https://www.linkedin.com/in/r%C3%B4mmel-de-castro/" target="_blank"
                                     rel="noopener noreferrer">Rômmel de Castro</a> (especialista
                                 em Engenharia de Software - UECE), com
                                 colaboração de <a href="http://linkedin.com/in/pamellasoaresds" target="_blank"
@@ -222,9 +270,14 @@
                                 que tal
                                 ideia seja evoluída e mantida como um projeto
                                 <b>colaborativo, open source e sem fins lucrativos</b>, inicialmente sob a <a
-                                    href="https://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"
-                                    rel="noopener noreferrer">Creative Commons BY-NC-SA 3.0</a>.
+                                    href="https://opensource.org/licenses/MIT" target="_blank"
+                                    rel="noopener noreferrer">MIT License</a>.
                             </p>
+
+                            <p class="textos-colaboradores"><a type="button" href="javascript:void(0)"
+                                    data-toggle="modal" data-target="#ModalColaboradores">Conheça nossos
+                                    colaboradores</a></p>
+
                         </div>
                         <div id="divisao3-left-bot">
 
@@ -256,26 +309,100 @@
 
                 <div id="divisao4">
                     <div class="d-flex align-items-center justify-content-center">
-                        <p class="topicos-ecossistema">APOIO</p>
+                        <p class="topicos-ecossistema">ORGANIZAÇÕES DOS NOSSOS COLABORADORES</p>
                     </div>
 
                     <div class="divisao4-order">
-                        <a href="http://www.ufc.br/" target="_blank"><img id="img8-prop"
-                                src="img/sec4-ufc-cinza-min.png" onmouseout="this.src='img/sec4-ufc-cinza-min.png';"
-                                onmouseover="this.src='img/sec4-ufc-min.png';"></a>
 
-                        <a href="http://www.uece.br/" target="_blank"><img id="img9-prop"
-                                src="img/sec4-uece-cinza-min.png" onmouseout="this.src='img/sec4-uece-cinza-min.png';"
-                                onmouseover="this.src='img/sec4-uece-min.png';"></a>
+                        <div class="divisao4-order-linha">
+                            <!--Linha 1-->
+                            <a class="imgSlot" href="http://www.ufc.br/" target="_blank"><img id="img-ufc-prop"
+                                    src="img/sec4-ufc-cinza-min.png" onmouseout="this.src='img/sec4-ufc-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-ufc-min.png';"></a>
 
-                        <a href="http://www.gesid.ufc.br/" target="_blank"><img id="img10-prop"
-                                src="img/sec4-gesid-cinza-min.png" onmouseout="this.src='img/sec4-gesid-cinza-min.png';"
-                                onmouseover="this.src='img/sec4-gesid-min.png';"></a>
+                            <a class="imgSlot" href="https://condominio.ufc.br/" target="_blank"><img id="img-cond-prop"
+                                    src="img/sec4-cond-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-cond-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-cond-min.png';"></a>
 
-                        <a href="mailto:mapainovacao@ufc.br?body=%0D%0A%0D%0AAtenciosamente,%0D%0A${NOME}"
-                            target="_blank"><img id="img11-prop" src="img/sec4-faca-parte-cinza-min.png"
-                                onmouseout="this.src='img/sec4-faca-parte-cinza-min.png';"
-                                onmouseover="this.src='img/sec4-faca-parte-min.png';"></a>
+                            <a class="imgSlot" href="http://www.uece.br/" target="_blank"><img id="img-uece-prop"
+                                    src="img/sec4-uece-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-uece-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-uece-min.png';"></a>
+
+                            <a class="imgSlot" href="https://www.ufca.edu.br/" target="_blank"><img id="img-ufca-prop"
+                                    src="img/sec4-ufca-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-ufca-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-ufca-min.png';"></a>
+                        </div>
+
+                        <div class="divisao4-order-linha">
+                            <!--Linha 2-->
+                            <a class="imgSlot" href="javascript:void(0)"><img id="img-pii-prop"
+                                    src="img/sec4-pii-cinza-min.png" onmouseout="this.src='img/sec4-pii-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-pii-min.png';"></a>
+
+                            <a class="imgSlot" href="http://criecariri.com.br/" target="_blank"><img id="img-crie-prop"
+                                    src="img/sec4-crie-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-crie-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-crie-min.png';"></a>
+
+                            <a class="imgSlot" href="https://www.rapaduravalley.org/" target="_blank"><img
+                                    id="img-rapadura-prop" src="img/sec4-rv-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-rv-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-rv-min.png';"></a>
+
+                            <a class="imgSlot" href="https://karirivalley.com.br/" target="_blank"><img
+                                    id="img-kariri-prop" src="img/sec4-kariri-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-kariri-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-kariri-min.png';"></a>
+                        </div>
+
+                        <div class="divisao4-order-linha">
+                            <!--Linha 3-->
+                            <a class="imgSlot" href="https://rapaduratech.com.br/" target="_blank"><img
+                                    id="img-rtech-prop" src="img/sec4-rth-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-rth-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-rth-min.png';"></a>
+
+                            <a class="imgSlot" href="http://santosmoises.com.br/" target="_blank"><img id="img-ale-prop"
+                                    src="img/sec4-ale-cinza-min.png" onmouseout="this.src='img/sec4-ale-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-ale-min.png';"></a>
+
+                            <a class="imgSlot" href="https://www.casaazul.vc/" target="_blank"><img
+                                    id="img-casaazul-prop" src="img/sec4-casaazul-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-casaazul-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-casaazul-min.png';"></a>
+
+                            <a class="imgSlot" href="https://www.juazeirodonorte.ce.gov.br/" target="_blank"><img
+                                    id="img-juazeirodonorte-prop" src="img/sec4-juazeirodonorte-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-juazeirodonorte-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-juazeirodonorte-min.png';"></a>
+                        </div>
+
+                        <div class="divisao4-order-linha">
+                            <!--Linha 4-->
+                            <a class="imgSlot" href="https://parquetecnologico.ufc.br/pt/" target="_blank"><img
+                                    id="img-pqtec-prop" src="img/sec4-parque-tecnologico-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-parque-tecnologico-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-parque-tecnologico-min.png';"></a>
+
+                            <a class="imgSlot" href="https://code.ufca.edu.br" target="_blank"><img id="img-code-prop"
+                                    src="img/sec4-code-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-code-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-code-min.png';"></a>
+
+                            <a class="imgSlot" href="http://www.gesid.ufc.br/" target="_blank"><img id="img-gesid-prop"
+                                    src="img/sec4-gesid-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-gesid-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-gesid-min.png';"></a>
+
+                            <a class="imgSlot"
+                                href="mailto:mapainovacao@ufc.br?body=%0D%0A%0D%0AAtenciosamente,%0D%0A${NOME}"
+                                target="_blank"><img id="img-facaparte-prop" src="img/sec4-faca-parte-cinza-min.png"
+                                    onmouseout="this.src='img/sec4-faca-parte-cinza-min.png';"
+                                    onmouseover="this.src='img/sec4-faca-parte-min.png';"></a>
+                        </div>
 
                     </div>
                 </div>
@@ -284,13 +411,24 @@
                     <div id="divisao5-right">
                         <p class="topicos-ecossistema">REFERÊNCIAS</p>
                         <p class="textos-ecossistema">
-                            Como material de apoio para a realização da categorização dos agentes que fazem parte deste
+                            Como material de apoio para a realização da categorização dos agentes que fazem parte
+                            deste
                             ecossistema, foi utilizado o documento "Mapeamento do Ambiente de Incentivo ao
-                            Empreendedorismo no Ceará" elaborado pelo Instituto de Inovação, organizado por
-                            Moisés Santos. Para as demarcações das comunidades existentes no mapa, foi utilizado o
+                            Empreendedorismo no Ceará" elaborado pelo Ambiente Local de Empreendedorismo (ALE),
+                            organizado por
+                            <a href="http://santosmoises.com.br/" target="_blank" rel="noopener noreferrer">Moisés
+                                Santos</a>.
+
+                            Além disso, utilizamos também o Mapeamento de Atores da <a href="https://abstartups.com.br/"
+                                target="_blank" rel="noopener noreferrer">Associação
+                                Brasileira
+                                de Startups (Abstartups)</a>. Para as demarcações das comunidades existentes no
+                            mapa,
+                            foi utilizado o
                             material do <a
                                 href="https://www.sebrae.com.br/sites/PortalSebrae/ufs/ce/institucional/atuacao-sebrae-no-ceara,039c6c20d354e410VgnVCM1000003b74010aRCRD"
-                                target="_blank" rel="noopener noreferrer">Sebrae/CE</a>. Dentre as diversas iniciativas
+                                target="_blank" rel="noopener noreferrer">Sebrae/CE</a>. Dentre as diversas
+                            iniciativas
                             de mapeamento do ecossistema local que são encontradas no Brasil, pode-se destacar três
                             referências os
                             quais serviram de inspiração para o desenvolvimento deste projeto:
@@ -337,10 +475,13 @@
             <div class="div-footer2">
 
                 <a href="/documentos/Mapa do Ecossistema de Inovação Cearense - Política de Privacidade e Segurança de Dados.pdf"
-                    target="_blank" style="margin-bottom: 10px;" class="">POLÍTICAS DE PRIVACIDADE</a>
+                    target="_blank" class="">POLÍTICAS DE PRIVACIDADE</a>
                 <a href="/documentos/Mapa do Ecossistema de Inovação Cearense - Termo de Uso.pdf" target="_blank"
                     class="">
                     TERMOS DE USO</a>
+                <a href="/documentos/Mapa do Ecossistema de Inovação Cearense - Termo de Consentimento.pdf"
+                    target="_blank" class="">
+                    TERMOS DE CONSENTIMENTO</a>
 
             </div>
         </footer>
@@ -367,20 +508,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.12.0/firebase-auth.js"></script>
 
-    <script>
-        // Your web app's Firebase configuration
-        var firebaseConfig = {
-            apiKey: "AIzaSyClfrEv6swF7n-tC27WUNV0Dhg_3BZ3lRQ",
-            authDomain: "mapa-ecin-13585.firebaseapp.com",
-            databaseURL: "https://mapa-ecin-13585-default-rtdb.firebaseio.com",
-            projectId: "mapa-ecin-13585",
-            storageBucket: "mapa-ecin-13585.appspot.com",
-            messagingSenderId: "675410893480",
-            appId: "1:675410893480:web:4e35bb2157f009ef90809d"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-    </script>
+    <script src="javascript/config.js"></script>
 
     <script src="javascript/ecossistema.js"></script>
 
