--- a/index.html
+++ b/index.html
@@ -732,6 +732,61 @@
   </div>
   <!--Fim do Modal Filtro--->
 
+  <!-- Modal Mensagem de cópia do Link de compartilhamento -->
+  <div class="modal fade" id="modalCompartilhamento" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+
+    <div class="modal-dialog modalCompartilhamento--posicionamento" role="document">
+      <div class="modal-content modalCompartilhamento--dimensao">
+
+        <div class="modal-header modalCompartilhamento--header">
+
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+            <span aria-hidden="true">&times;</span>
+
+          </button>
+
+        </div>
+
+        <!--Inicio do Conteudo-->
+        <div class="modal-body modalCompartilhamento--body">
+
+          <div class="modalCompartilhamento--divA">
+
+            <span class="modalCompartilhamento--iconeCheck">
+              <i class="far fa-clipboard"></i>
+            </span>
+
+          </div>
+
+          <div class="modalCompartilhamento--divB">
+
+            <p id="instituicaoEvento" class="modalCompartilhamento--conteudo"><b>Link de Compartilhamento</b></p>
+
+            <div class="modalCompartilhamento--divC">
+
+              <input id="inputCompartilhamento" class="modalCompartilhamento--input" type="text" id="url"
+                value="http://mapainovacao.ufc.br/index.html" />
+              <button id="btnInputCompartilhamento" class="modalCompartilhamento--btnCopiar"
+                type="button">Copiar</button>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <!--Fim do Conteudo-->
+        <div class="modal-footer modalCompartilhamento--footer">
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!--Fim do Modal Mensagem de cópia do Link de compartilhamento--->
+
   <!-- Modal Mensagem de Agradecimento -->
   <div class="modal fade" id="modalAgradecimento" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
@@ -1196,33 +1251,9 @@
   <!--CDN da Masrcara-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 
-  <script>
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyClfrEv6swF7n-tC27WUNV0Dhg_3BZ3lRQ",
-      authDomain: "mapa-ecin-13585.firebaseapp.com",
-      databaseURL: "https://mapa-ecin-13585-default-rtdb.firebaseio.com",
-      projectId: "mapa-ecin-13585",
-      storageBucket: "mapa-ecin-13585.appspot.com",
-      messagingSenderId: "675410893480",
-      appId: "1:675410893480:web:4e35bb2157f009ef90809d"
-
-      /*apiKey: "AIzaSyD7mV-NjSQ8dNBQhX6OnHEli-cTL78JTfw",
-      authDomain: "tccv5-3c3e2.firebaseapp.com",
-      databaseURL: "https://tccv5-3c3e2.firebaseio.com",
-      projectId: "tccv5-3c3e2",
-      storageBucket: "tccv5-3c3e2.appspot.com",
-      messagingSenderId: "1057642468733",
-      appId: "1:1057642468733:web:3da625da68085f8a39e814",
-      measurementId: "G-XRDHGX61T2"*/
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-  </script>
-
-
+  <script src="javascript/config.js"></script>
   <script src="model/componente.js"></script>
-  <script src="model/Ceara.js"></script>
+  <script src="model/ceara.js"></script>
   <script src="model/evento.js"></script>
   <script src="model/comunidade.js"></script>
   <script src="model/usuario.js"></script>
